--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-La sintaxis del comando no es correcta.
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>documento git aprendiendo</title>
+  </head>
+  <body>
+    <h1>CV vanesa Micaela Romeo</h1>
+  </body>
+</html>
