--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
   </head>
   <body>
     <h1>CV vanesa Micaela Romeo</h1>
+    <p>
+      contacto:2664221109 <br />
+      direccion:Caseros2145
+    </p>
   </body>
 </html>
