--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   </head>
   <body>
     <h1>CV vanesa Micaela Romeo</h1>
+    <nav>
+      <ul>
+        <li><a>home</a></li>
+        <li><a>contct</a></li>
+        <li><a>portfolio</a></li>
+      </ul>
+    </nav>
     <p>
       contacto:2664221109 <br />
       direccion:Caseros2145
