--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>documento git aprendiendo</title>
   </head>
   <body>
+    <h2>hola!</h2>
     <h1>CV vanesa Micaela Romeo</h1>
     <p>
       contacto:2664221109 <br />
